<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maph</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="overflow_menu">Overflow menu</string>
    <string name="switch_layout">Switch layout</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="_photo_title_format">Photo: %1$s</string>
    <string name="open_map">Open map</string>
    <string name="close">Close</string>
    <string name="dialog_title">Photo info</string>
    <string name="delete_photo">Delete photo</string>
    <string name="edit_photo">Edit photo</string>
    <string name="delete_confirm">Are you sure you want to delete this?</string>
    <string name="photo_title">Photo title</string>
    <string name="photo_description">Photo description</string>
    <string name="edit_date">Edit date</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

</resources>
