<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_action_map"
        android:showAsAction="always"
        android:title="@string/open_map"/>
    <item
        android:id="@+id/menu_photo_select"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="always"
        android:title="@string/pick_a_photo"/>
    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/overflow_menu">
        <menu>
            <item
                android:id="@+id/menu_switch_layout"
                android:title="@string/switch_layout"/>
            <item
                android:id="@+id/menu_sort_by_title"
                android:title="@string/sort_by_title"/>
            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>

</menu>